# lerunner

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
assets/: style.css
src/: desktop-entries.cpp  desktop-entries.hpp  main.cpp  plugins.hpp  window.cpp  window.hpp
src/plugins/: desktop-entries.cpp  desktop-entries.hpp
